manage --add-opens option on JPS level to ensure it is used only when applicable (IDEA-274639)
(cherry-picked from commit 880d78010ae0b3d1b6bb8a80c47d26c92a91cdfa)

GitOrigin-RevId: 72110611a089d9d23078361c70debfdf18e785b3