@@ -4,8 +4,6 @@ package de.plushnikov.intellij.plugin.jps;
 import com.intellij.compiler.server.BuildProcessParametersProvider;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.project.Project;
-import com.intellij.pom.java.LanguageLevel;
-import com.intellij.psi.util.PsiUtil;
 import de.plushnikov.intellij.plugin.Version;
 import de.plushnikov.intellij.plugin.util.LombokLibraryUtil;
 import org.jetbrains.annotations.NotNull;
@@ -35,19 +33,6 @@ public final class LombokBuildProcessParametersProvider extends BuildProcessPara
       result.add("-Djps.track.ap.dependencies=false");
     }
 
-    if (PsiUtil.getLanguageLevel(myProject).isAtLeast(LanguageLevel.JDK_16) &&
-        Version.isLessThan(lombokVersion, Version.LOMBOK_VERSION_WITH_JDK16_FIX)) {
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED");
-    }
     return result;
   }
 }
